force-app/main/default/objects/LLC_BI__Enable_Exclude__c/fields/LLC_BI__Comments__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Comments__c</fullName>
    <description>--DEPRECATED-- This optional text field may be set to required via field set and. Users populate this field to specify exclusions for a loan or deb; default is null.</description>
    <label>-D Comments</label>
    <type>TextArea</type>
</CustomField>