force-app/main/default/objects/LLC_BI__Enable_Exclude__c/fields/LLC_BI__Exclude_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exclude_Reason__c</fullName>
    <description>--DEPRECATED-- This optional field may be set to required via a field set. Users select this field to specify reportable exclusions for a loan or debt; default is null.</description>
    <label>-D Exclude Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>This loan is being paid out.</fullName>
            </value>
            <value>
                <fullName>This loan&apos;s amount is being paid off by an in progress loan.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>