force-app/main/default/objects/LLC_BI__Enable_Exclude__c/fields/LLC_BI__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>--DEPRECATED-- This optional field auto-populates via the system. It specifies the product package in which to exclude a loan or debt in the exposure calculation.</description>
    <label>-D Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipName>Enable_Excludes</relationshipName>
    <type>Lookup</type>
</CustomField>