force-app/main/default/objects/LLC_BI__Enable_Exclude__c/validationRules/validation_depre.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_depre</fullName>
    <active>true</active>
    <errorConditionFormula>LLC_BI__Account__c= Id</errorConditionFormula>
    <errorMessage>fufijjj</errorMessage>
</ValidationRule>