force-app/main/default/objects/LLC_BI__Enable_Exclude__c/validationRules/validation_deprecate.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_deprecate</fullName>
    <active>true</active>
    <errorConditionFormula>LLC_BI__Account__r.Site  = LLC_BI__Comments__c</errorConditionFormula>
    <errorMessage>qwerty</errorMessage>
</ValidationRule>